k8s/00-namespace-config.yml
apiVersion: v1
kind: Namespace
metadata:
  name: crm
